--- a/all/index.html
+++ b/all/index.html
@@ -12,7 +12,11 @@
     <!-- <script src="let-const-var.js"></script> -->
     <!-- <script src="basic-operators.js"></script> -->
     <!-- <script src="Operator-Precedence.js"></script> -->
-    <script src="Coding-Challenge-1.js"></script>
+    <!-- <script src="Coding-Challenge-1.js"></script> -->
+    <!-- <script src="Strings-and-Template-Literals.js"></script> -->
+    <!-- <script src="if-else-statement.js"></script> -->
+    <!-- <script src="Coding-Challenge2.js"></script> -->
+    <script src="Type-Conversion-and-Coercion.js"></script>
     
   </body>
 </html>
