--- a/all/index.html
+++ b/all/index.html
@@ -16,7 +16,12 @@
     <!-- <script src="Strings-and-Template-Literals.js"></script> -->
     <!-- <script src="if-else-statement.js"></script> -->
     <!-- <script src="Coding-Challenge2.js"></script> -->
-    <script src="Type-Conversion-and-Coercion.js"></script>
+    <!-- <script src="Type-Conversion-and-Coercion.js"></script> -->
+    <!-- <script src="Truthy-and-Falsy-Values.js"></script> -->
+    <!-- <script src="Equality-Operators==vs===.js"></script> -->
+    <!-- <script src="Boolean-Logic.js"></script> -->
+    <!-- <script src="Logical-Operators.js"></script> -->
+    <script src="Coding-Challenge-3.js"></script>
     
   </body>
 </html>
