--- a/all/index.html
+++ b/all/index.html
@@ -21,7 +21,9 @@
     <!-- <script src="Equality-Operators==vs===.js"></script> -->
     <!-- <script src="Boolean-Logic.js"></script> -->
     <!-- <script src="Logical-Operators.js"></script> -->
-    <script src="Coding-Challenge-3.js"></script>
+    <!-- <script src="Coding-Challenge-3.js"></script> -->
+    <!-- <script src="The-switch-Statement.js"></script> -->
+    <script src="Statements-and-Expressions.js"></script>
     
   </body>
 </html>
