--- a/all/index.html
+++ b/all/index.html
@@ -23,7 +23,9 @@
     <!-- <script src="Logical-Operators.js"></script> -->
     <!-- <script src="Coding-Challenge-3.js"></script> -->
     <!-- <script src="The-switch-Statement.js"></script> -->
-    <script src="Statements-and-Expressions.js"></script>
+    <!-- <script src="Statements-and-Expressions.js"></script> -->
+    <!-- <script src="The-Conditional-(Ternary)-Operator.js"></script> -->
+    <script src="Coding-Challenge-4.js"></script>
     
   </body>
 </html>
