add 'use strict'

--- a/section-2/index.html
+++ b/section-2/index.html
@@ -7,25 +7,25 @@
   </head>
   <body>
     Hello coders
-    <!-- <script src="/Section-2/variable.js"></script> -->
-    <!-- <script src="/Section-2/datatype.js"></script> -->
-    <!-- <script src="/Section-2/let-const-var.js"></script> -->
-    <!-- <script src="/Section-2/basic-operators.js"></script> -->
-    <!-- <script src="/Section-2/Operator-Precedence.js"></script> -->
-    <!-- <script src="/Section-2/Coding-Challenge-1.js"></script> -->
-    <!-- <script src="/Section-2/Strings-and-Template-Literals.js"></script> -->
-    <!-- <script src="/Section-2/if-else-statement.js"></script> -->
-    <!-- <script src="/Section-2/Coding-Challenge2.js"></script> -->
-    <!-- <script src="/Section-2/Type-Conversion-and-Coercion.js"></script> -->
-    <!-- <script src="/Section-2/Truthy-and-Falsy-Values.js"></script> -->
-    <!-- <script src="/Section-2/Equality-Operators==vs===.js"></script> -->
-    <!-- <script src="/Section-2/Boolean-Logic.js"></script> -->
-    <!-- <script src="/Section-2/Logical-Operators.js"></script> -->
-    <!-- <script src="/Section-2/Coding-Challenge-3.js"></script> -->
-    <!-- <script src="/Section-2/The-switch-Statement.js"></script> -->
-    <!-- <script src="/Section-2/Statements-and-Expressions.js"></script> -->
-    <!-- <script src="/Section-2/The-Conditional-(Ternary)-Operator.js"></script> -->
-    <!-- <script src="/Section-2/Coding-Challenge-4.js"></script> -->
-    <script src="/Section-3/Activating-Strict-Mode.js"></script>
+    <!-- <script type='text/javascript' src="/Section-2/variable.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/datatype.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/let-const-var.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/basic-operators.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/Operator-Precedence.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/Coding-Challenge-1.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/Strings-and-Template-Literals.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/if-else-statement.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/Coding-Challenge2.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/Type-Conversion-and-Coercion.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/Truthy-and-Falsy-Values.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/Equality-Operators==vs===.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/Boolean-Logic.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/Logical-Operators.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/Coding-Challenge-3.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/The-switch-Statement.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/Statements-and-Expressions.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/The-Conditional-(Ternary)-Operator.js"></script> -->
+    <!-- <script type='text/javascript' src="/Section-2/Coding-Challenge-4.js"></script> -->
+    <script type='text/javascript' src="/Section-3/Activating-Strict-Mode.js"></script>
   </body>
 </html>
