--- a/Section-3/index.html
+++ b/Section-3/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     hello coder 🤡🤬❌😎🔥👀😢🎉😅😮😂😍😀💰😨❕
-    <script src="functions.js"></script>
+    <!-- <script src="functions.js"></script> -->
+    <!-- <script src="Function-Declarations-vs-Expressions.js"></script> -->
+    <!-- <script src="Arrow-Functions.js"></script> -->
+    <script src="Functions-Calling-Other-Functions.js"></script>
 </body>
 </html>
