--- a/Section-3/index.html
+++ b/Section-3/index.html
@@ -10,6 +10,8 @@
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="Function-Declarations-vs-Expressions.js"></script> -->
     <!-- <script src="Arrow-Functions.js"></script> -->
-    <script src="Functions-Calling-Other-Functions.js"></script>
+    <!-- <script src="Functions-Calling-Other-Functions.js"></script> -->
+    <!-- <script src="Reviewing-Functions.js"></script> -->
+    <script src="Coding-Challenge-5.js"></script>
 </body>
 </html>
