--- a/Section-3/index.html
+++ b/Section-3/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="Arrow-Functions.js"></script> -->
     <!-- <script src="Functions-Calling-Other-Functions.js"></script> -->
     <!-- <script src="Reviewing-Functions.js"></script> -->
-    <script src="Coding-Challenge-5.js"></script>
+    <!-- <script src="Coding-Challenge-5.js"></script> -->
+    <script src="Introduction-to-Arrays.js"></script>
 </body>
 </html>
