--- a/Section-3/index.html
+++ b/Section-3/index.html
@@ -13,6 +13,8 @@
     <!-- <script src="Functions-Calling-Other-Functions.js"></script> -->
     <!-- <script src="Reviewing-Functions.js"></script> -->
     <!-- <script src="Coding-Challenge-5.js"></script> -->
-    <script src="Introduction-to-Arrays.js"></script>
+    <!-- <script src="Introduction-to-Arrays.js"></script> -->
+    <!-- <script src="Basic-Array-Operations-(Methods).js"></script> -->
+    <script src="Coding-Challenge-6.js"></script>
 </body>
 </html>
