--- a/Section-3/index.html
+++ b/Section-3/index.html
@@ -15,6 +15,9 @@
     <!-- <script src="Coding-Challenge-5.js"></script> -->
     <!-- <script src="Introduction-to-Arrays.js"></script> -->
     <!-- <script src="Basic-Array-Operations-(Methods).js"></script> -->
-    <script src="Coding-Challenge-6.js"></script>
+    <!-- <script src="Coding-Challenge-6.js"></script> -->
+    <!-- <script src="Introduction-to-Objects.js"></script> -->
+    <!-- <script src="Object-methods.js"></script> -->
+    <script src="Coding-Challenge-7.js"></script>
 </body>
 </html>
