--- a/Section-3/index.html
+++ b/Section-3/index.html
@@ -18,6 +18,11 @@
     <!-- <script src="Coding-Challenge-6.js"></script> -->
     <!-- <script src="Introduction-to-Objects.js"></script> -->
     <!-- <script src="Object-methods.js"></script> -->
-    <script src="Coding-Challenge-7.js"></script>
+    <!-- <script src="Coding-Challenge-7.js"></script> -->
+    <!-- <script src="Iteration-The-for-Loop.js"></script> -->
+    <!-- <script src="Looping-Arrays-Breaking-and-Continuing.js"></script> -->
+    <!-- <script src="looping-backwards-and-loops-in-loops.js"></script> -->
+    <!-- <script src="while-loop.js"></script> -->
+    <script src="coding-challenge-8.js"></script>
 </body>
 </html>
