--- a/Section-3/index.html
+++ b/Section-3/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Docu</title>
+    <!-- <title>Doc</title> -->
+  </head>
+  <body>
     hello coder 🤡🤬❌😎🔥👀😢🎉😅😮😂😍😀💰😨❕
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="Function-Declarations-vs-Expressions.js"></script> -->
@@ -23,6 +24,7 @@
     <!-- <script src="Looping-Arrays-Breaking-and-Continuing.js"></script> -->
     <!-- <script src="looping-backwards-and-loops-in-loops.js"></script> -->
     <!-- <script src="while-loop.js"></script> -->
-    <script src="coding-challenge-8.js"></script>
-</body>
+    <!-- <script src="coding-challenge-8.js"></script> -->
+    <script src="./problem.js"></script>
+  </body>
 </html>
