--- a/Section-3/index.html
+++ b/Section-3/index.html
@@ -25,6 +25,8 @@
     <!-- <script src="looping-backwards-and-loops-in-loops.js"></script> -->
     <!-- <script src="while-loop.js"></script> -->
     <!-- <script src="coding-challenge-8.js"></script> -->
-    <script src="./problem.js"></script>
+    <!-- <script src="./problem.js"></script> -->
+    <!-- <script src="debugging.js"></script> -->
+    <script src="coding-challenge-9.js"></script>
   </body>
 </html>
